# qt-console-test-field

./: CMakeLists.txt
inc/: logger.h  test-gui.h  test-of-test-qstring.h  test-qstring.h
src/: logger.cpp  main.cpp  test-gui.cpp  test-main.cpp  test-of-test-qstring.cpp  test-qstring.cpp
